[package]
name = "system_benchmarks"
version = "0.1.0"
authors = ["mlacko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokio_nfqueue"
path = "src/bin/tokio_nfqueue.rs"

[dependencies]
nfq = "0.2"
hex = "0.4"
pnet = "0.26"
bytes = "0.5"
smoltcp = "0.6"
failure = "0.1"
serde_json = "1.0"

tracing = "0.1.15"
tracing-subscriber = "0.2.5"
tracing-opentelemetry = "0.5.0"
opentelemetry = "0.6.0"
opentelemetry-jaeger = "0.5.0"

tokio = { version="0.2", features=["full"] }
serde = { version="1.0", features=["derive"] }
crypto = { version="*", git = "https://github.com/simplestaking/tezedge" }
storage = { version = "*", git = "htps://github.com/simplestaking/tezedge" }
tezos_encoding = { version="*", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { version="*", git = "https://github.com/simplestaking/tezedge" }